Cleaned up data

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -30,7 +30,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0872c21d",
+   "id": "74b66369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del crime_df[\"neighborhoodCrimeStatisticsID\"]\n",
+    "#crime_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ae1429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +55,8 @@
     "})\n",
     "#crime_df\n",
     "\n",
-    "del crime_df[\"neighborhoodCrimeStatisticsID\"]\n",
-    "#crime_df\n",
-    "\n",
     "crime_df[\"Date\"] = crime_df[\"Month\"].astype(str) +\"/\"+ crime_df[\"Year\"].astype(str)\n",
-    "#crime_df"
+    "#crime_df[\"Neighborhood\"].unique()"
    ]
   },
   {
@@ -160,53 +168,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#More Clean up\n",
     "#Removing the no-named Neighborhoods\n",
     "crime_df = crime_df[crime_df[\"Neighborhood\"] != \"Unknown\"]\n",
-    "#crime_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb2f19ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#crime_df\n",
+    "\n",
     "#Removing data outside our timeline\n",
-    "crime_df = crime_df[crime_df[\"Year\"] > 2017]"
+    "crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
+    "\n",
+    "#Fill NaN\n",
+    "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
+    "#crime_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6aa4617",
+   "id": "6503bd75",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Final Cleaned DataFrame\n",
-    "#crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
-    "crime_df.set_index(keys=\"Neighborhood\",inplace=True)\n",
-    "crime_df"
+    "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
+    "crime_df.set_index(keys=\"Neighborhood\",inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effd836a",
+   "id": "ce02b567",
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_data = crime_df.groupby([\"Year\",\"Month\",\"Crime\"])[[\"Number of Cases\"]].count()\n",
-    "date_data"
+    "crime_df.head(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "953dcb5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
