Primitive barh plot of neighborhoods and total crime cases over entire timeperiod

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -184,12 +184,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6503bd75",
+   "id": "cf73466e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Final Cleaned DataFrame\n",
     "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
+    "crime_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6503bd75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "crime_df.set_index(keys=\"Neighborhood\",inplace=True)"
    ]
   },
@@ -202,6 +212,22 @@
    "source": [
     "crime_df.head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a805d04d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b0c4af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
