--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -8,7 +8,10 @@
    "outputs": [],
    "source": [
     "#Import Dependencies\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -190,18 +193,93 @@
    "source": [
     "#Final Cleaned DataFrame\n",
     "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
-    "crime_df.set_index(keys=\"Neighborhood\",inplace=True)"
+    "crime_df.set_index(keys=\"Date\",inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce02b567",
+   "id": "69f58991",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime_df.head(20)"
+    "#Violent Crime before George Floyd versus after DataFrames\n",
+    "crime_df.head(20)\n",
+    "\n",
+    "before_df = crime_df.loc[:\"5/2020\",:]\n",
+    "after_df = crime_df.loc[\"6/2020\":,:]\n",
+    "\n",
+    "x_axis = np.arange(0,4,1)\n",
+    "\n",
+    "#Before DataFrame\n",
+    "before_df = before_df[before_df[\"Crime\"]!=\"Arson\"]\n",
+    "before_df = before_df[before_df[\"Crime\"]!=\"Auto Theft\"]\n",
+    "before_df = before_df[before_df[\"Crime\"]!=\"Burglary\"]\n",
+    "before_df = before_df[before_df[\"Crime\"]!=\"Larceny\"]\n",
+    "before_cases = before_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "before_cases = before_cases[\"Number of Cases\"].values.tolist()\n",
+    "\n",
+    "#After DataFrame\n",
+    "after_df = after_df[after_df[\"Crime\"]!=\"Arson\"]\n",
+    "after_df = after_df[after_df[\"Crime\"]!=\"Auto Theft\"]\n",
+    "after_df = after_df[after_df[\"Crime\"]!=\"Burglary\"]\n",
+    "after_df = after_df[after_df[\"Crime\"]!=\"Larceny\"]\n",
+    "after_cases = after_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "after_cases = after_cases[\"Number of Cases\"].values.tolist()\n",
+    "\n",
+    "#Set Tick Names\n",
+    "violent_ticks = before_df[\"Crime\"].unique().tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b085d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Before Visualization\n",
+    "before_bar = plt.bar(x_axis,before_cases,align=\"center\")\n",
+    "\n",
+    "tick_locations = [value for value in x_axis]\n",
+    "plt.xticks(tick_locations, violent_ticks)\n",
+    "\n",
+    "plt.xlim(-0.75, len(x_axis)-0.25)\n",
+    "plt.ylim(0, 6000)\n",
+    "\n",
+    "plt.title(\"Number of Crimes before George Floyd\")\n",
+    "plt.xlabel(\"Type of Crime\")\n",
+    "plt.ylabel(\"Number of Cases\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c844935c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#After Visualization\n",
+    "after_bar = plt.bar(x_axis,after_cases,align=\"center\")\n",
+    "\n",
+    "tick_locations = [value for value in x_axis]\n",
+    "plt.xticks(tick_locations, violent_ticks)\n",
+    "\n",
+    "plt.xlim(-0.75, len(x_axis)-0.25)\n",
+    "plt.ylim(0, 6000)\n",
+    "\n",
+    "plt.title(\"Number of Crimes after George Floyd\")\n",
+    "plt.xlabel(\"Type of Crime\")\n",
+    "plt.ylabel(\"Number of Cases\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b875b9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
