Added Imges Folder and 1st Images

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -249,7 +249,9 @@
     "\n",
     "plt.title(\"Number of Crimes before George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
-    "plt.ylabel(\"Number of Cases\")"
+    "plt.ylabel(\"Number of Cases\")\n",
+    "plt.savefig(\"Images/before_violent_crimes.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -270,7 +272,9 @@
     "\n",
     "plt.title(\"Number of Crimes after George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
-    "plt.ylabel(\"Number of Cases\")"
+    "plt.ylabel(\"Number of Cases\")\n",
+    "plt.savefig(\"Images/after_violent_crimes.png\")\n",
+    "plt.show()"
    ]
   },
   {
