Added a Combined Visual and changed picture types

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -177,7 +177,7 @@
     "#crime_df\n",
     "\n",
     "#Removing data outside our timeline\n",
-    "crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
+    "#crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
     "\n",
     "#Fill NaN\n",
     "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
@@ -217,7 +217,7 @@
     "before_df = before_df[before_df[\"Crime\"]!=\"Burglary\"]\n",
     "before_df = before_df[before_df[\"Crime\"]!=\"Larceny\"]\n",
     "before_cases = before_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "before_cases = before_cases[\"Number of Cases\"].values.tolist()\n",
+    "before_cases_list = before_cases[\"Number of Cases\"].values.tolist()\n",
     "\n",
     "#After DataFrame\n",
     "after_df = after_df[after_df[\"Crime\"]!=\"Arson\"]\n",
@@ -225,7 +225,7 @@
     "after_df = after_df[after_df[\"Crime\"]!=\"Burglary\"]\n",
     "after_df = after_df[after_df[\"Crime\"]!=\"Larceny\"]\n",
     "after_cases = after_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "after_cases = after_cases[\"Number of Cases\"].values.tolist()\n",
+    "after_cases_list = after_cases[\"Number of Cases\"].values.tolist()\n",
     "\n",
     "#Set Tick Names\n",
     "violent_ticks = before_df[\"Crime\"].unique().tolist()"
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "#Before Visualization\n",
-    "before_bar = plt.bar(x_axis,before_cases,align=\"center\")\n",
+    "before_bar = plt.bar(x_axis,before_cases_list,align=\"center\")\n",
     "\n",
     "tick_locations = [value for value in x_axis]\n",
     "plt.xticks(tick_locations, violent_ticks)\n",
@@ -250,7 +250,7 @@
     "plt.title(\"Number of Crimes before George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "plt.savefig(\"Images/before_violent_crimes.png\")\n",
+    "plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "#After Visualization\n",
-    "after_bar = plt.bar(x_axis,after_cases,align=\"center\")\n",
+    "after_bar = plt.bar(x_axis,after_cases_list,align=\"center\",color=\"red\")\n",
     "\n",
     "tick_locations = [value for value in x_axis]\n",
     "plt.xticks(tick_locations, violent_ticks)\n",
@@ -273,14 +273,30 @@
     "plt.title(\"Number of Crimes after George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "plt.savefig(\"Images/after_violent_crimes.png\")\n",
+    "plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b875b9b9",
+   "id": "b539d618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Combined Bar Plot\n",
+    "combined_violent_df = pd.DataFrame(before_cases)\n",
+    "combined_violent_df[\"Number of Cases After\"] = after_cases\n",
+    "combined_violent_df.rename(columns=({\"Number of Cases\" : \"Number of Cases Before\"}),inplace=True)\n",
+    "combined_violent_df.plot.bar(ylabel=\"Number of Cases\")\n",
+    "plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13da75b2",
    "metadata": {},
    "outputs": [],
    "source": []
