Fixed Neighborhood Corrections

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -159,7 +159,10 @@
     "    'WHITTIER' : 'Whittier', \n",
     "    'WILLARD - HAY' : 'Willard - Hay', \n",
     "    'WINDOM' : 'Windom',\n",
-    "    'WINDOM PARK' : 'Windom Park'\n",
+    "    'WINDOM PARK' : 'Windom Park',\n",
+    "    \"CARAG\" : \"South Uptown\",\n",
+    "    'ECCO' : \"East Bde Maka Ska\",\n",
+    "    \"West Calhoun\" : \"West Maka Ska\"\n",
     "})\n",
     "#crime_df[\"Neighborhood\"].unique()"
    ]
@@ -250,7 +253,7 @@
     "plt.title(\"Number of Crimes before George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
+    "#plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -273,7 +276,7 @@
     "plt.title(\"Number of Crimes after George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
+    "#plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -286,17 +289,17 @@
    "source": [
     "#Combined Bar Plot\n",
     "combined_violent_df = pd.DataFrame(before_cases)\n",
-    "combined_violent_df[\"Number of Cases After\"] = after_cases\n",
-    "combined_violent_df.rename(columns=({\"Number of Cases\" : \"Number of Cases Before\"}),inplace=True)\n",
+    "combined_violent_df[\"After George Floyd\"] = after_cases\n",
+    "combined_violent_df.rename(columns=({\"Number of Cases\" : \"Before George Floyd\"}),inplace=True)\n",
     "combined_violent_df.plot.bar(ylabel=\"Number of Cases\")\n",
-    "plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
+    "#plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13da75b2",
+   "id": "12465742",
    "metadata": {},
    "outputs": [],
    "source": []
