--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -180,7 +180,7 @@
     "#crime_df\n",
     "\n",
     "#Removing data outside our timeline\n",
-    "#crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
+    "crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
     "\n",
     "#Fill NaN\n",
     "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
@@ -202,42 +202,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69f58991",
+   "id": "2822ec46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Violent Crime before George Floyd versus after DataFrames\n",
+    "#Crime Before Vs After\n",
     "crime_df.head(20)\n",
     "\n",
     "before_df = crime_df.loc[:\"5/2020\",:]\n",
-    "after_df = crime_df.loc[\"6/2020\":,:]\n",
-    "\n",
-    "x_axis = np.arange(0,4,1)\n",
-    "\n",
-    "#Before DataFrame\n",
-    "before_df = before_df[before_df[\"Crime\"]!=\"Arson\"]\n",
-    "before_df = before_df[before_df[\"Crime\"]!=\"Auto Theft\"]\n",
-    "before_df = before_df[before_df[\"Crime\"]!=\"Burglary\"]\n",
-    "before_df = before_df[before_df[\"Crime\"]!=\"Larceny\"]\n",
-    "before_cases = before_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "before_cases_list = before_cases[\"Number of Cases\"].values.tolist()\n",
-    "\n",
-    "#After DataFrame\n",
-    "after_df = after_df[after_df[\"Crime\"]!=\"Arson\"]\n",
-    "after_df = after_df[after_df[\"Crime\"]!=\"Auto Theft\"]\n",
-    "after_df = after_df[after_df[\"Crime\"]!=\"Burglary\"]\n",
-    "after_df = after_df[after_df[\"Crime\"]!=\"Larceny\"]\n",
-    "after_cases = after_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "after_cases_list = after_cases[\"Number of Cases\"].values.tolist()\n",
-    "\n",
-    "#Set Tick Names\n",
-    "violent_ticks = before_df[\"Crime\"].unique().tolist()"
+    "after_df = crime_df.loc[\"6/2020\":,:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b085d02",
+   "id": "a0668458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Before Violent DataFrame\n",
+    "before_violent_df = before_df[before_df[\"Crime\"]!=\"Arson\"]\n",
+    "before_violent_df = before_violent_df[before_violent_df[\"Crime\"]!=\"Auto Theft\"]\n",
+    "before_violent_df = before_violent_df[before_violent_df[\"Crime\"]!=\"Burglary\"]\n",
+    "before_violent_df = before_violent_df[before_violent_df[\"Crime\"]!=\"Larceny\"]\n",
+    "#before_violent_df\n",
+    "\n",
+    "before_cases = before_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "before_cases_list = before_cases[\"Number of Cases\"].values.tolist()\n",
+    "#before_cases\n",
+    "\n",
+    "#After Violent DataFrame\n",
+    "after_violent_df = after_df[after_df[\"Crime\"]!=\"Arson\"]\n",
+    "after_violent_df = after_violent_df[after_violent_df[\"Crime\"]!=\"Auto Theft\"]\n",
+    "after_violent_df = after_violent_df[after_violent_df[\"Crime\"]!=\"Burglary\"]\n",
+    "after_violent_df = after_violent_df[after_violent_df[\"Crime\"]!=\"Larceny\"]\n",
+    "#after_violent_df\n",
+    "\n",
+    "after_cases = after_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "after_cases_list = after_cases[\"Number of Cases\"].values.tolist()\n",
+    "#after_cases\n",
+    "\n",
+    "#Set Tick Names\n",
+    "violent_ticks = before_violent_df[\"Crime\"].unique().tolist()\n",
+    "\n",
+    "x_axis = np.arange(0,4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2df8bf0e",
    "metadata": {},
    "outputs": [],
    "source": [
