--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -180,7 +180,7 @@
     "#crime_df\n",
     "\n",
     "#Removing data outside our timeline\n",
-    "crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
+    "crime_df = crime_df[crime_df[\"Year\"] > 2017]\n",
     "\n",
     "#Fill NaN\n",
     "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
@@ -209,7 +209,7 @@
     "#Crime Before Vs After\n",
     "crime_df.head(20)\n",
     "\n",
-    "before_df = crime_df.loc[:\"5/2020\",:]\n",
+    "before_df = crime_df.loc[\"5/2018\":\"5/2020\",:]\n",
     "after_df = crime_df.loc[\"6/2020\":,:]"
    ]
   },
@@ -309,14 +309,6 @@
     "#plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12465742",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
