--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -227,9 +227,9 @@
     "before_violent_df = before_violent_df[before_violent_df[\"Crime\"]!=\"Larceny\"]\n",
     "#before_violent_df\n",
     "\n",
-    "before_cases = before_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "before_cases_list = before_cases[\"Number of Cases\"].values.tolist()\n",
-    "#before_cases\n",
+    "before_violent_cases = before_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "before_violent_cases_list = before_violent_cases[\"Number of Cases\"].values.tolist()\n",
+    "#before_violent_cases\n",
     "\n",
     "#After Violent DataFrame\n",
     "after_violent_df = after_df[after_df[\"Crime\"]!=\"Arson\"]\n",
@@ -238,9 +238,9 @@
     "after_violent_df = after_violent_df[after_violent_df[\"Crime\"]!=\"Larceny\"]\n",
     "#after_violent_df\n",
     "\n",
-    "after_cases = after_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
-    "after_cases_list = after_cases[\"Number of Cases\"].values.tolist()\n",
-    "#after_cases\n",
+    "after_violent_cases = after_violent_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "after_violent_cases_list = after_violent_cases[\"Number of Cases\"].values.tolist()\n",
+    "#after_violent_cases\n",
     "\n",
     "#Set Tick Names\n",
     "violent_ticks = before_violent_df[\"Crime\"].unique().tolist()\n",
@@ -255,8 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Before Visualization\n",
-    "before_bar = plt.bar(x_axis,before_cases_list,align=\"center\")\n",
+    "#Before Violent Visualization\n",
+    "before_violent_bar = plt.bar(x_axis,before_violent_cases_list,align=\"center\")\n",
     "\n",
     "tick_locations = [value for value in x_axis]\n",
     "plt.xticks(tick_locations, violent_ticks)\n",
@@ -267,7 +267,7 @@
     "plt.title(\"Number of Crimes before George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "#plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
+    "plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -278,8 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#After Visualization\n",
-    "after_bar = plt.bar(x_axis,after_cases_list,align=\"center\",color=\"red\")\n",
+    "#After Violent Visualization\n",
+    "after_violent_bar = plt.bar(x_axis,after_violent_cases_list,align=\"center\",color=\"red\")\n",
     "\n",
     "tick_locations = [value for value in x_axis]\n",
     "plt.xticks(tick_locations, violent_ticks)\n",
@@ -290,7 +290,7 @@
     "plt.title(\"Number of Crimes after George Floyd\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
-    "#plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
+    "plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -301,14 +301,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Combined Bar Plot\n",
-    "combined_violent_df = pd.DataFrame(before_cases)\n",
-    "combined_violent_df[\"After George Floyd\"] = after_cases\n",
+    "#Combined Violent Visualization\n",
+    "combined_violent_df = pd.DataFrame(before_violent_cases)\n",
+    "combined_violent_df[\"After George Floyd\"] = after_violent_cases\n",
     "combined_violent_df.rename(columns=({\"Number of Cases\" : \"Before George Floyd\"}),inplace=True)\n",
     "combined_violent_df.plot.bar(ylabel=\"Number of Cases\")\n",
-    "#plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
+    "plt.savefig(\"Images/combined_violent_crimes.jpeg\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1df5bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Before Property DataFrame\n",
+    "before_property_df = before_df[before_df[\"Crime\"]!=\"Aggravated Assault\"]\n",
+    "before_property_df = before_property_df[before_property_df[\"Crime\"]!=\"Homicide\"]\n",
+    "before_property_df = before_property_df[before_property_df[\"Crime\"]!=\"Rape\"]\n",
+    "before_property_df = before_property_df[before_property_df[\"Crime\"]!=\"Robbery\"]\n",
+    "#before_property_df\n",
+    "\n",
+    "before_property_cases = before_property_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "before_property_cases_list = before_property_cases[\"Number of Cases\"].values.tolist()\n",
+    "#before_property_cases\n",
+    "\n",
+    "#After Property DataFrame\n",
+    "after_property_df = after_df[after_df[\"Crime\"]!=\"Aggravated Assault\"]\n",
+    "after_property_df = after_property_df[after_property_df[\"Crime\"]!=\"Homicide\"]\n",
+    "after_property_df = after_property_df[after_property_df[\"Crime\"]!=\"Rape\"]\n",
+    "after_property_df = after_property_df[after_property_df[\"Crime\"]!=\"Robbery\"]\n",
+    "#after_property_df\n",
+    "\n",
+    "after_property_cases = after_property_df.groupby(\"Crime\")[[\"Crime\",\"Number of Cases\"]].sum()\n",
+    "after_property_cases_list = after_property_cases[\"Number of Cases\"].values.tolist()\n",
+    "#after_property_cases\n",
+    "\n",
+    "#Set Tick Names\n",
+    "property_ticks = before_property_df[\"Crime\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11592377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Before Property Visualization\n",
+    "before_property_bar = plt.bar(x_axis,before_property_cases_list,align=\"center\")\n",
+    "\n",
+    "tick_locations = [value for value in x_axis]\n",
+    "plt.xticks(tick_locations, property_ticks)\n",
+    "\n",
+    "plt.xlim(-0.75, len(x_axis)-0.25)\n",
+    "plt.ylim(0, 30000)\n",
+    "\n",
+    "plt.title(\"Number of Crimes before George Floyd\")\n",
+    "plt.xlabel(\"Type of Crime\")\n",
+    "plt.ylabel(\"Number of Cases\")\n",
+    "plt.savefig(\"Images/before_property_crimes.jpeg\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee8f6f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#After Property Visualization\n",
+    "after_property_bar = plt.bar(x_axis,after_property_cases_list,align=\"center\",color=\"red\")\n",
+    "\n",
+    "tick_locations = [value for value in x_axis]\n",
+    "plt.xticks(tick_locations, violent_ticks)\n",
+    "\n",
+    "plt.xlim(-0.75, len(x_axis)-0.25)\n",
+    "plt.ylim(0, 30000)\n",
+    "\n",
+    "plt.title(\"Number of Crimes after George Floyd\")\n",
+    "plt.xlabel(\"Type of Crime\")\n",
+    "plt.ylabel(\"Number of Cases\")\n",
+    "plt.savefig(\"Images/after_property_crimes.jpeg\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32768000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Combined Violent Visualization\n",
+    "combined_property_df = pd.DataFrame(before_property_cases)\n",
+    "combined_property_df[\"After George Floyd\"] = after_property_cases\n",
+    "combined_property_df.rename(columns=({\"Number of Cases\" : \"Before George Floyd\"}),inplace=True)\n",
+    "combined_property_df.plot.bar(ylabel=\"Number of Cases\")\n",
+    "plt.savefig(\"Images/combined_property_crimes.jpeg\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b929337",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
