--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -209,6 +209,7 @@
     "#Crime Before Vs After\n",
     "crime_df.head(20)\n",
     "\n",
+    "gf_df = crime_df.loc[\"4/2020\":\"6/2020\",:]\n",
     "before_df = crime_df.loc[\"5/2018\":\"5/2020\",:]\n",
     "after_df = crime_df.loc[\"6/2020\":,:]"
    ]
@@ -264,7 +265,7 @@
     "plt.xlim(-0.75, len(x_axis)-0.25)\n",
     "plt.ylim(0, 6000)\n",
     "\n",
-    "plt.title(\"Number of Crimes before George Floyd\")\n",
+    "plt.title(\"Number of Crimes before George Floyd (5/18-5/20)\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
     "plt.savefig(\"Images/before_violent_crimes.jpeg\")\n",
@@ -287,7 +288,7 @@
     "plt.xlim(-0.75, len(x_axis)-0.25)\n",
     "plt.ylim(0, 6000)\n",
     "\n",
-    "plt.title(\"Number of Crimes after George Floyd\")\n",
+    "plt.title(\"Number of Crimes after George Floyd (6/20-6/22)\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
     "plt.savefig(\"Images/after_violent_crimes.jpeg\")\n",
@@ -359,7 +360,7 @@
     "plt.xlim(-0.75, len(x_axis)-0.25)\n",
     "plt.ylim(0, 30000)\n",
     "\n",
-    "plt.title(\"Number of Crimes before George Floyd\")\n",
+    "plt.title(\"Number of Crimes before George Floyd (5/18-5/20)\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
     "plt.savefig(\"Images/before_property_crimes.jpeg\")\n",
@@ -382,7 +383,7 @@
     "plt.xlim(-0.75, len(x_axis)-0.25)\n",
     "plt.ylim(0, 30000)\n",
     "\n",
-    "plt.title(\"Number of Crimes after George Floyd\")\n",
+    "plt.title(\"Number of Crimes after George Floyd (6/20-6/22)\")\n",
     "plt.xlabel(\"Type of Crime\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
     "plt.savefig(\"Images/after_property_crimes.jpeg\")\n",
