--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "#Import Dependencies\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,7 +26,7 @@
     "crime_data = pd.read_csv(file)\n",
     "\n",
     "crime_df = pd.DataFrame(crime_data)\n",
-    "#crime_df.head(10)"
+    "crime_df.head(10)"
    ]
   },
   {
@@ -35,7 +37,7 @@
    "outputs": [],
    "source": [
     "del crime_df[\"neighborhoodCrimeStatisticsID\"]\n",
-    "#crime_df"
+    "crime_df"
    ]
   },
   {
@@ -56,7 +58,7 @@
     "#crime_df\n",
     "\n",
     "crime_df[\"Date\"] = crime_df[\"Month\"].astype(str) +\"/\"+ crime_df[\"Year\"].astype(str)\n",
-    "#crime_df[\"Neighborhood\"].unique()"
+    "crime_df[\"Neighborhood\"].unique()"
    ]
   },
   {
@@ -158,7 +160,7 @@
     "    'WINDOM' : 'Windom',\n",
     "    'WINDOM PARK' : 'Windom Park'\n",
     "})\n",
-    "#crime_df[\"Neighborhood\"].unique()"
+    "crime_df[\"Neighborhood\"].unique()"
    ]
   },
   {
@@ -174,11 +176,11 @@
     "#crime_df\n",
     "\n",
     "#Removing data outside our timeline\n",
-    "crime_df = crime_df[crime_df[\"Year\"] > 2018]\n",
+    "crime_df = crime_df[crime_df[\"Year\"] > 2017]\n",
     "\n",
     "#Fill NaN\n",
     "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
-    "#crime_df.head(10)"
+    "crime_df.head(10)"
    ]
   },
   {
@@ -190,25 +192,98 @@
    "source": [
     "#Final Cleaned DataFrame\n",
     "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
-    "crime_df.set_index(keys=\"Neighborhood\",inplace=True)"
+    "crime_df.set_index(keys=\"Date\",inplace=True)\n",
+    "crime_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce02b567",
+   "id": "68d3b8fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime_df.head(20)"
+    "#Crime data before George Floyd incident\n",
+    "crimedatab4_df = crime_df.loc[\"6/2018\":\"5/2020\", :]\n",
+    "crimedatab4_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69aad52d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Crime data after George Floyd incident\n",
+    "crimedata_after_df = crime_df.loc[\"6/2020\":, :]\n",
+    "crimedata_after_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "173e07b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "data1 = crimedatab4_df.groupby([\"Crime\"]).sum()\n",
+    "crime_labels = data1.index\n",
+    "x_axis = data1[\"Number of Cases\"]\n",
+    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=3)\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff44376c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = crimedata_after_df.groupby([\"Crime\"]).sum()\n",
+    "crime_labels = data2.index\n",
+    "x_axis = data2[\"Number of Cases\"]\n",
+    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=3)\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3cb958c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "before =  data1[\"Number of Cases\"]\n",
+    "after = data2[\"Number of Cases\"]\n",
+    "# create a figure with two subplots\n",
+    "fig, (ax1, ax2) = plt.subplots(1,2)\n",
+    "\n",
+    "# plot each pie chart in a separate subplot\n",
+    "ax1.pie(before,labels= crime_labels, autopct = \"%1.1f%%\", radius=1.5)\n",
+    "ax2.pie(after,labels= crime_labels, autopct = \"%1.1f%%\", radius=1.5)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f2dcf5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData38",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -220,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
