Added CSV files

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -210,8 +210,11 @@
     "crime_df.head(20)\n",
     "\n",
     "gf_df = crime_df.loc[\"4/2020\":\"6/2020\",:]\n",
+    "gf_df.to_csv(\"Resources/george_floyd.csv\")\n",
     "before_df = crime_df.loc[\"5/2018\":\"5/2020\",:]\n",
-    "after_df = crime_df.loc[\"6/2020\":,:]"
+    "before_df.to_csv(\"Resources/before_floyd.csv\")\n",
+    "after_df = crime_df.loc[\"6/2020\":,:]\n",
+    "after_df.to_csv(\"Resources/after_floyd.csv\")"
    ]
   },
   {
@@ -405,14 +408,6 @@
     "plt.savefig(\"Images/combined_property_crimes.jpeg\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b929337",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
