Plotting in hell!

--- a/Yeoman-Verk11.ipynb
+++ b/Yeoman-Verk11.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "df = cleanup_df(df)\n",
     "df = df.copy()\n",
-    "df.sort_values(by=\"neighborhood\")"
+    "# df.sort_values(by=\"neighborhood\")"
    ]
   },
   {
@@ -353,6 +353,131 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "659aebbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df_prop = pd.DataFrame(index=COMMUNITIES, data={\"Property_Before\":bp, \"Property_After\":ap, \"%_Chg\": 0})\n",
+    "plot_df_viol = pd.DataFrame(index=COMMUNITIES, data={\"Violent_Before\":bv, \"Violent_After\":av, \"%_Chg\": 0})\n",
+    "   \n",
+    "plot_df_prop[\"%_Chg\"] = ((plot_df_prop[\"Property_After\"] - plot_df_prop[\"Property_Before\"]) / plot_df_prop[\"Property_Before\"]) * 100\n",
+    "\n",
+    "plot_df_viol[\"%_Chg\"] = ((plot_df_viol[\"Violent_After\"] - plot_df_viol[\"Violent_Before\"]) / plot_df_viol[\"Violent_Before\"]) * 100\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dba1ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df_prop.plot.bar(color=[\"blue\",\"green\",\"black\"], figsize=(12,4))\n",
+    "plt.ylim(-50, 290)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54f6fd7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df_viol.plot.bar(color=[\"blue\",\"green\",\"black\"], figsize=(12,4))\n",
+    "plt.ylim(-20, 120)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dfc45f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = COMMUNITIES\n",
+    "y = plot_df_prop[\"%_Chg\"]\n",
+    "\n",
+    "plt.barh(x, y)\n",
+    " \n",
+    "for index, value in enumerate(y):\n",
+    "    plt.text(round(value,2), index, str(round(value,2)))\n",
+    " \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74460019",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23dd0bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1858e2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9586fbb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3d35eed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a4911e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a9a4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b132fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e7bb34d",
    "metadata": {},
    "outputs": [],
@@ -382,6 +507,14 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbe81918",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -668,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.ttest_ind(bp, ap, equal_var=False) "
+    "st.ttest_ind(bv, av, equal_var=False) "
    ]
   }
  ],
