--- a/Yeoman-Verk9.ipynb
+++ b/Yeoman-Verk9.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "df = cleanup_df(df)\n",
     "df = df.copy()\n",
-    "df.sort_values(by=\"neighborhood\")"
+    "# df.sort_values(by=\"neighborhood\")"
    ]
   },
   {
@@ -668,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.ttest_ind(bp, ap, equal_var=False) "
+    "st.ttest_ind(bv, av, equal_var=False) "
    ]
   }
  ],
