Done for the moment

--- a/Yeoman-Verk11.ipynb
+++ b/Yeoman-Verk11.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "before_violent = before_violent.drop([\"reportMonth\", \"reportYear\"], axis=1)\n",
     "\n",
-    "# before_violent"
+    "before_violent"
    ]
   },
   {
@@ -395,53 +395,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfc45f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "x = COMMUNITIES\n",
-    "y = plot_df_prop[\"%_Chg\"]\n",
-    "\n",
-    "plt.barh(x, y)\n",
-    " \n",
-    "for index, value in enumerate(y):\n",
-    "    plt.text(round(value,2), index, str(round(value,2)))\n",
-    " \n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74460019",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23dd0bc1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1858e2b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9586fbb9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# % Change in Property Crime 1 Month Before and After GF  \n",
+    "\n",
+    "plot_df_prop[\"positive\"] = plot_df_prop[\"%_Chg\"] >= 0\n",
+    "\n",
+    "x = COMMUNITIES\n",
+    "y = plot_df_prop[\"%_Chg\"]\n",
+    "z = plot_df_prop[\"positive\"]\n",
+    "\n",
+    "\n",
+    "plt.barh(x, y, color=z.map({True: 'red', False: 'green'}))\n",
+    " \n",
+    "for index, value in enumerate(y):\n",
+    "    the_num = f\"+{str(int(value))}%\" if int(value)>= 0 else f\"{str(int(value))}%\"\n",
+    "    plt.text(round(value,2), index, the_num)\n",
+    "\n",
+    "# Invert y-axis\n",
+    "\n",
+    "ax = plt.gca()\n",
+    "ax.invert_yaxis()\n",
+    "\n",
+    "ax.set_xlim(-40, 40)\n",
+    "\n",
+    "plt.title(\"% Change in Property Crime 1 Month After George Floyd Killing\")\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -449,338 +432,31 @@
    "id": "b3d35eed",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18a4911e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51a9a4a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33b132fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e7bb34d",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (20, 5))\n",
+    "# % Change in Violent Crime 1 Month Before and After GF  \n",
     "\n",
-    "\n",
-    "x_axis = np.arange(len(COMMUNITIES))\n",
-    "\n",
-    "tick_locations = [value for value in x_axis]\n",
-    "\n",
-    "plt.xticks(tick_locations, COMMUNITIES)\n",
-    "\n",
-    " # Tell matplotlib that we will be making a bar chart\n",
-    "# Users is our y axis and x_axis is, of course, our x axis\n",
-    "# We apply align=\"edge\" to ensure our bars line up with our tick marks\n",
-    "\n",
-    "plt.bar(x_axis, bp, color='r', alpha=0.5, align=\"center\", width=.1)\n",
-    "\n",
-    "\n",
-    "# Give our chart some labels and a tile\n",
-    "\n",
-    "plt.title(\"Property Crime (before GF)\")\n",
-    "plt.xlabel(\"Mpls Communities\")\n",
-    "plt.ylabel(\"Number of Property Crimes\")\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbe81918",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e64cfcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize = (20, 5))\n",
-    "\n",
-    "\n",
-    "x_axis = np.arange(len(COMMUNITIES))\n",
-    "\n",
-    "tick_locations = [value for value in x_axis]\n",
-    "\n",
-    "plt.xticks(tick_locations, COMMUNITIES)\n",
-    "\n",
-    " # Tell matplotlib that we will be making a bar chart\n",
-    "# Users is our y axis and x_axis is, of course, our x axis\n",
-    "# We apply align=\"edge\" to ensure our bars line up with our tick marks\n",
-    "\n",
-    "plt.bar(x_axis, ap, color='r', alpha=0.5, align=\"center\", width=.1)\n",
-    "\n",
-    "\n",
-    "# Give our chart some labels and a tile\n",
-    "\n",
-    "plt.title(\"Property Crime (after GF)\")\n",
-    "plt.xlabel(\"Mpls Communities\")\n",
-    "plt.ylabel(\"Number of Property Crimes\")\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2e27052",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize = (20, 5))\n",
-    "\n",
-    "\n",
-    "x_axis = np.arange(len(COMMUNITIES))\n",
-    "\n",
-    "tick_locations = [value for value in x_axis]\n",
-    "\n",
-    "plt.xticks(tick_locations, COMMUNITIES)\n",
-    "\n",
-    " # Tell matplotlib that we will be making a bar chart\n",
-    "# Users is our y axis and x_axis is, of course, our x axis\n",
-    "# We apply align=\"edge\" to ensure our bars line up with our tick marks\n",
-    "\n",
-    "plt.bar(x_axis, bv, color='r', alpha=0.5, align=\"center\", width=.1)\n",
-    "\n",
-    "\n",
-    "# Give our chart some labels and a tile\n",
-    "\n",
-    "plt.title(\"Violent Crime (before GF)\")\n",
-    "plt.xlabel(\"Mpls Communities\")\n",
-    "plt.ylabel(\"Number of Violent Crimes\")\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2b71286",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize = (20, 5))\n",
-    "\n",
-    "x_axis = np.arange(len(COMMUNITIES))\n",
-    "\n",
-    "tick_locations = [value for value in x_axis]\n",
-    "\n",
-    "plt.xticks(tick_locations, COMMUNITIES, rotation=45)\n",
-    "\n",
-    " # Tell matplotlib that we will be making a bar chart\n",
-    "# Users is our y axis and x_axis is, of course, our x axis\n",
-    "# We apply align=\"edge\" to ensure our bars line up with our tick marks\n",
-    "\n",
-    "plt.bar(x_axis, av, color='r', alpha=0.5, align=\"edge\")\n",
-    "\n",
-    "# Give our chart some labels and a tile\n",
-    "\n",
-    "plt.title(\"Violent Crime (after GF)\")\n",
-    "plt.xlabel(\"Mpls Communities\")\n",
-    "plt.ylabel(\"Number of Violent Crimes\")\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb2cb2dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize = (20, 5))\n",
+    "plot_df_viol[\"positive\"] = plot_df_viol[\"%_Chg\"] >= 0\n",
     "\n",
     "x = COMMUNITIES\n",
-    "y1 = bp\n",
-    "y2 = ap\n",
-    "  \n",
-    "# plot bars in stack manner\n",
-    "plt.bar(x, y1, color='r')\n",
-    "plt.bar(x, y2, bottom=y1, color='b')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc526f1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 5\n",
-    "menMeans = (20, 35, 30, 35, 27)\n",
-    "menStd =   (2, 3, 4, 1, 2)\n",
+    "y = plot_df_viol[\"%_Chg\"]\n",
+    "z = plot_df_viol[\"positive\"]\n",
     "\n",
-    "ind = np.arange(N)  # the x locations for the groups\n",
-    "width = 0.35       # the width of the bars\n",
     "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "rects1 = ax.bar(ind, menMeans, width, color='royalblue', yerr=menStd)\n",
+    "plt.barh(x, y, color=z.map({True: 'red', False: 'green'}))\n",
+    " \n",
+    "for index, value in enumerate(y):\n",
+    "    the_num = f\"+{str(int(value))}%\" if int(value)>= 0 else f\"{str(int(value))}%\"\n",
+    "    plt.text(round(value,2), index, the_num)\n",
     "\n",
-    "womenMeans = (25, 32, 34, 20, 25)\n",
-    "womenStd =   (3, 5, 2, 3, 3)\n",
-    "rects2 = ax.bar(ind+width, womenMeans, width, color='seagreen', yerr=womenStd)\n",
+    "# Invert y-axis\n",
     "\n",
-    "# add some\n",
-    "ax.set_ylabel('Scores')\n",
-    "ax.set_title('Scores by group and gender')\n",
-    "ax.set_xticks(ind + width / 2)\n",
-    "ax.set_xticklabels( ('G1', 'G2', 'G3', 'G4', 'G5') )\n",
+    "ax = plt.gca()\n",
+    "ax.invert_yaxis()\n",
     "\n",
-    "ax.legend( (rects1[0], rects2[0]), ('Men', 'Women') )\n",
+    "ax.set_xlim(-20, 119)\n",
     "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1aae9ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team = COMMUNITIES\n",
-    "female = bp\n",
-    "male = ap\n",
-    "\n",
-    "fig = plt.figure(figsize = (15, 5))\n",
-    "x_axis = np.arange(len(team))\n",
-    "\n",
-    "# Multi bar Chart\n",
-    "\n",
-    "plt.bar(x_axis, female, width=.2, label = 'BP', color=\"blue\")\n",
-    "plt.bar(x_axis +.2, male, width=.2, label = 'AP', color=\"red\")\n",
-    "\n",
-    "# Xticks\n",
-    "\n",
-    "plt.xticks(x_axis+.2/2, team)\n",
-    "\n",
-    "# Add legend\n",
-    "\n",
-    "plt.legend()\n",
-    "\n",
-    "# Display\n",
-    "\n",
+    "plt.title(\"% Change in Violent Crime 1 Month After George Floyd Killing\")\n",
     "plt.grid()\n",
-    "\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "743ddaeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(bp)\n",
-    "print(ap)\n",
-    "\n",
-    "\n",
-    "data = {\"Before GF\": bp, \"After GF\": ap}\n",
-    "df = pd.DataFrame(data, columns=[\"Before GF\", \"After GF\"], index=COMMUNITIES)\n",
-    "\n",
-    "print(df)\n",
-    "df.plot.barh()\n",
-    "plt.grid()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e1c063e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\"Month Before GF\": bv, \"Month After GF\": av}\n",
-    "df = pd.DataFrame(data, columns=[\"Month Before GF\", \"Month After GF\"], index=COMMUNITIES)\n",
-    "\n",
-    "df.plot.barh()\n",
-    "plt.grid()\n",
-    "plt.title(\"Violent Crime\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108eabda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\"Month Before GF\": bp, \"Month After GF\": ap}\n",
-    "df = pd.DataFrame(data, columns=[\"Month Before GF\", \"Month After GF\"], index=COMMUNITIES)\n",
-    "\n",
-    "df.plot.barh()\n",
-    "plt.grid()\n",
-    "plt.title(\"Property Crime\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91d48732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\"Month Before GF\": bp, \"Month After GF\": ap}\n",
-    "df = pd.DataFrame(data, columns=[\"Month Before GF\", \"Month After GF\"], index=COMMUNITIES)\n",
-    "\n",
-    "df.plot.box()\n",
-    "plt.grid()\n",
-    "plt.title(\"Property Crime\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f8ab7f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\"Month Before GF\": bv, \"Month After GF\": av}\n",
-    "df = pd.DataFrame(data, columns=[\"Month Before GF\", \"Month After GF\"], index=COMMUNITIES)\n",
-    "\n",
-    "df.plot.box()\n",
-    "plt.grid()\n",
-    "plt.title(\"Violent Crime\")\n",
     "plt.show()"
    ]
   },
@@ -791,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.ttest_ind(bp, ap, equal_var=False) "
+    "st.ttest_ind(bp.mean(), ap.mean(), equal_var=False) "
    ]
   },
   {
@@ -801,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.ttest_ind(bv, av, equal_var=False) "
+    "st.ttest_ind(bv.mean(), av.mean(), equal_var=False) "
    ]
   }
  ],
