--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -223,16 +223,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173e07b5",
+   "id": "e40af1d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
+    "# Create a piechart with crime data before George floyd incident\n",
     "data1 = crimedatab4_df.groupby([\"Crime\"]).sum()\n",
     "crime_labels = data1.index\n",
     "x_axis = data1[\"Number of Cases\"]\n",
-    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=3)\n",
-    "plt.figure(figsize=(6,6))\n",
+    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=1.0, textprops ={\"fontsize\":15})\n",
+    "plt.title(\"Overall crime Incidents occurred before George Floyd killing from 06/2018-05/2020\", fontsize=15, loc=\"center\")\n",
+    "plt.figure(figsize=(4,6))\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -243,11 +245,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a piechart with crime data after George floyd incident\n",
     "data2 = crimedata_after_df.groupby([\"Crime\"]).sum()\n",
     "crime_labels = data2.index\n",
     "x_axis = data2[\"Number of Cases\"]\n",
-    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=3)\n",
+    "plt.pie(x_axis, labels= crime_labels, autopct = \"%1.1f%%\", radius=1.0, textprops ={\"fontsize\":15})\n",
+    "plt.title(\"Overall crime Incidents occurred after George Floyd killing from 06/2020-06/2022\", loc=\"center\", fontsize=15)\n",
     "plt.figure(figsize=(6,6))\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -264,8 +269,15 @@
     "fig, (ax1, ax2) = plt.subplots(1,2)\n",
     "\n",
     "# plot each pie chart in a separate subplot\n",
-    "ax1.pie(before,labels= crime_labels, autopct = \"%1.1f%%\", radius=1.5)\n",
-    "ax2.pie(after,labels= crime_labels, autopct = \"%1.1f%%\", radius=1.5)\n",
+    "\n",
+    "ax1.pie(before,labels= crime_labels, autopct = \"%1.1f%%\", radius=5, textprops ={\"fontsize\":8})\n",
+    "\n",
+    "ax2.pie(after,labels= crime_labels, autopct = \"%1.1f%%\", radius=5, textprops ={\"fontsize\":8})\n",
+    "ax1.set_title('Overall crime Incidents occurred before George Floyd killing from 06/2018-05/2020')\n",
+    "ax2.set_title('Overall crime Incidents occurred after George Floyd killing from 06/2020-06/2022')\n",
+    "plt.subplots_adjust(wspace=19)\n",
+    "\n",
+    "\n",
     "\n",
     "plt.show()"
    ]
@@ -273,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2dcf5d",
+   "id": "978d9630",
    "metadata": {},
    "outputs": [],
    "source": []
