--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46451507",
+   "id": "8a2e36c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,210 +17,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7302b7a0",
+   "id": "e2c000f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load Dataset\n",
-    "file = \"Resources/crime_data.csv\"\n",
     "\n",
-    "crime_data = pd.read_csv(file)\n",
+    "#File 1\n",
+    "file1 = \"Resources/before_floyd.csv\"\n",
     "\n",
-    "crime_df = pd.DataFrame(crime_data)\n",
-    "#crime_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74b66369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del crime_df[\"neighborhoodCrimeStatisticsID\"]\n",
-    "#crime_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45ae1429",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Data Clean up\n",
-    "crime_df = crime_df.rename(columns={\n",
-    "    \"neighborhood\" : \"Neighborhood\",\n",
-    "    \"ucrDescription\" : \"Crime\",\n",
-    "    \"number\" : \"Number of Cases\",\n",
-    "    \"reportMonth\" : \"Month\",\n",
-    "    \"reportYear\" : \"Year\"\n",
-    "})\n",
-    "#crime_df\n",
+    "before_data = pd.read_csv(file1)\n",
     "\n",
-    "crime_df[\"Date\"] = crime_df[\"Month\"].astype(str) +\"/\"+ crime_df[\"Year\"].astype(str)\n",
-    "#crime_df[\"Neighborhood\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d38a0ed0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Cleaning Up Neighborhoods\n",
-    "crime_df[\"Neighborhood\"] = crime_df[\"Neighborhood\"].replace({\n",
-    "    '** NOT ASSIGNED **' : \"Unknown\",\n",
-    "    'Z_** NOT ASSIGNED **' : \"Unknown\",\n",
-    "    'ARMATAGE' : 'Armatage',\n",
-    "    'AUDUBON PARK' : 'Audubon Park',\n",
-    "    'BANCROFT' : 'Bancroft',\n",
-    "    'BELTRAMI' : 'Beltrami',\n",
-    "    'BOTTINEAU' : 'Bottineau',\n",
-    "    'BRYANT' : 'Bryant',\n",
-    "    'BRYN - MAWR' : 'Bryn - Mawr',\n",
-    "    'CAMDEN INDUSTRIAL' :'Camden Industrial',\n",
-    "    'CARAG' : \"Carag\",\n",
-    "    'CEDAR - ISLES - DEAN' : 'Cedar - Isles - Dean',\n",
-    "    'CEDAR RIVERSIDE' : 'Cedar Riverside',\n",
-    "    'CENTRAL' : 'Central',\n",
-    "    'CLEVELAND' : 'Cleveland',\n",
-    "    'COLUMBIA PARK' : 'Columbia Park',\n",
-    "    'COMO' : 'Como',\n",
-    "    'COOPER' : 'Cooper',\n",
-    "    'CORCORAN' : 'Corcoran',\n",
-    "    'DIAMOND LAKE' : 'Diamond Lake',\n",
-    "    'DOWNTOWN EAST' : 'Downtown East',\n",
-    "    'DOWNTOWN WEST' : 'Downtown West',\n",
-    "    'EAST HARRIET' : 'East Harriet',\n",
-    "    'EAST ISLES' : 'East Isles',\n",
-    "    'EAST PHILLIPS' : 'East Phillips',\n",
-    "    'ECCO' : \"Ecco\",\n",
-    "    'ELLIOT PARK' : 'Elliot Park',\n",
-    "    'ERICSSON' : 'Ericsson',\n",
-    "    'FIELD' : 'Field',\n",
-    "    'FOLWELL' : 'Folwell',\n",
-    "    'FULTON' : 'Fulton',\n",
-    "    'HALE' : 'Hale',\n",
-    "    'HARRISON' : 'Harrison',\n",
-    "    'HAWTHORNE' : 'Hawthorne',\n",
-    "    'HIAWATHA' : 'Hiawatha',\n",
-    "    'HOLLAND' : 'Holland',\n",
-    "    'HOWE' : 'Howe',\n",
-    "    'HUMBOLDT INDUSTRIAL AREA' : 'Humboldt Industrial Area',\n",
-    "    'JORDAN' : 'Jordan',\n",
-    "    'KEEWAYDIN' : 'Keewaydin',\n",
-    "    'KENNY' : 'Kenny', \n",
-    "    'KENWOOD' : 'Kenwood', \n",
-    "    'KING FIELD' : 'King Field', \n",
-    "    'LIND - BOHANON' : 'Lind - Bohanon',\n",
-    "    'LINDEN HILLS' : 'Linden Hills', \n",
-    "    'LOGAN PARK' : 'Logan Park', \n",
-    "    'LONGFELLOW' : 'Longfellow', \n",
-    "    'LORING PARK' : 'Loring Park',\n",
-    "    'LOWRY HILL' : 'Lowry Hill', \n",
-    "    'LOWRY HILL EAST' : 'Lowry Hill East', \n",
-    "    'LYNDALE' : 'Lyndale', \n",
-    "    'LYNNHURST' : 'Lynnhurst',\n",
-    "    'MARCY HOLMES' : 'Marcy Holmes', \n",
-    "    'MARSHALL TERRACE' : 'Marshall Terrace', \n",
-    "    'MCKINLEY' : 'McKinley',\n",
-    "    'MID - CITY INDUSTRIAL' : 'Mid - City Industrial', \n",
-    "    'MIDTOWN PHILLIPS' : 'Midtown Phillips', \n",
-    "    'MINNEHAHA' : 'Minnehaha',\n",
-    "    'MORRIS PARK' : 'Morris Park', \n",
-    "    'NEAR - NORTH' : 'Near - North', \n",
-    "    'NICOLLET ISLAND - EAST BANK' : 'Nicollet Island - East Bank',\n",
-    "    'NORTH LOOP' : 'North Loop', \n",
-    "    'NORTHEAST PARK' : 'Northeast Park', \n",
-    "    'NORTHROP' : 'Northrop', \n",
-    "    'PAGE' : 'Page',\n",
-    "    'PHILLIPS WEST' : 'Phillips West', \n",
-    "    'POWDERHORN PARK' : 'Powderhorn Park',\n",
-    "    'PROSPECT PARK - EAST RIVER ROAD' : 'Prospect Park - East River Road', \n",
-    "    'REGINA' : 'Regina', \n",
-    "    'SEWARD' : 'Seward', \n",
-    "    'SHERIDAN' : 'Sheridan',\n",
-    "    'SHINGLE CREEK' : 'Shingle Creek', \n",
-    "    'ST. ANTHONY EAST' : 'St. Anthony East', \n",
-    "    'ST. ANTHONY WEST' : 'St. Anthony West',\n",
-    "    'STANDISH' : 'Standish', \n",
-    "    'STEVENS SQUARE - LORING HEIGHTS' : \"Steven's Square - Loring Heights\", \n",
-    "    'SUMNER - GLENWOOD' : 'Sumner - Glenwood',\n",
-    "    'TANGLETOWN' : 'Tangletown', \n",
-    "    'UNIVERSITY OF MINNESOTA' : 'University of Minnesota', \n",
-    "    'VENTURA VILLAGE' : 'Ventura Village',\n",
-    "    'VICTORY' : 'Victory', \n",
-    "    'WAITE PARK' : 'Waite Park', \n",
-    "    'WEBBER - CAMDEN' : 'Webber - Camden', \n",
-    "    'WENONAH' : 'Wenonah',\n",
-    "    'WEST CALHOUN' : 'West Calhoun', \n",
-    "    'WHITTIER' : 'Whittier', \n",
-    "    'WILLARD - HAY' : 'Willard - Hay', \n",
-    "    'WINDOM' : 'Windom',\n",
-    "    'WINDOM PARK' : 'Windom Park',\n",
-    "    \"CARAG\" : \"South Uptown\",\n",
-    "    'ECCO' : \"East Bde Maka Ska\",\n",
-    "    \"West Calhoun\" : \"West Maka Ska\"\n",
-    "})\n",
-    "#crime_df[\"Neighborhood\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78c4ccb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#More Clean up\n",
-    "#Removing the no-named Neighborhoods\n",
-    "crime_df = crime_df[crime_df[\"Neighborhood\"] != \"Unknown\"]\n",
-    "#crime_df\n",
+    "before_df = pd.DataFrame(before_data)\n",
+    "#before_df.head(10)\n",
     "\n",
-    "#Removing data outside our timeline\n",
-    "crime_df = crime_df[crime_df[\"Year\"] > 2017]\n",
+    "#File 2\n",
+    "file2 = \"Resources/george_floyd.csv\"\n",
     "\n",
-    "#Fill NaN\n",
-    "crime_df[\"Number of Cases\"] = crime_df[\"Number of Cases\"].fillna(0)\n",
-    "#crime_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6503bd75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Final Cleaned DataFrame\n",
-    "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
-    "crime_df.set_index(keys=\"Date\",inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2822ec46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Crime Before Vs After\n",
-    "crime_df.head(20)\n",
+    "george_data = pd.read_csv(file2)\n",
     "\n",
-    "gf_df = crime_df.loc[\"4/2020\":\"6/2020\",:]\n",
-    "gf_df.to_csv(\"Resources/george_floyd.csv\")\n",
-    "before_df = crime_df.loc[\"5/2018\":\"5/2020\",:]\n",
-    "before_df.to_csv(\"Resources/before_floyd.csv\")\n",
-    "after_df = crime_df.loc[\"6/2020\":,:]\n",
-    "after_df.to_csv(\"Resources/after_floyd.csv\")"
+    "george_df = pd.DataFrame(george_data)\n",
+    "#george_df.head(10)\n",
+    "\n",
+    "#File 3\n",
+    "file3 = \"Resources/after_floyd.csv\"\n",
+    "\n",
+    "after_data = pd.read_csv(file3)\n",
+    "\n",
+    "after_df = pd.DataFrame(after_data)\n",
+    "#after_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0668458",
+   "id": "8eb90e40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2df8bf0e",
+   "id": "ec782cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c844935c",
+   "id": "581b89b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b539d618",
+   "id": "5f129974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1df5bd7",
+   "id": "2aeb59c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11592377",
+   "id": "6995f542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8f6f3f",
+   "id": "d1d37ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32768000",
+   "id": "8f4d6940",
    "metadata": {},
    "outputs": [],
    "source": [
